<?xml version="1.0" encoding="utf-8"?>
<!--Jelvix demo CodeSample
    Copyright © 2017 Jelvix. All rights reserved.-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:fillViewport="true"
    tools:context="com.jelvix.kotlincodesample.ui.activity.login.LoginActivity"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/login_cardView"
            android:layout_width="@dimen/login_card_view_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardCornerRadius="@dimen/offset_small1"
            app:cardElevation="@dimen/offset_small3"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.jelvix.kotlincodesample.ui.view.MaterialProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:progressColour="@color/accent"
                        app:backgroundColour="@color/accent_light"
                        android:visibility="invisible"
                        tools:visibility="visible"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_decor_height"
                        android:layout_marginTop="@dimen/offset_normal2"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/login_decor_width"
                            android:layout_height="match_parent"
                            android:background="@color/primary"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAllCaps="true"
                            android:gravity="center_vertical"
                            android:textColor="@color/primary"
                            android:textSize="@dimen/textSize_normal2"
                            android:paddingLeft="@dimen/offset_normal1"
                            android:paddingRight="@dimen/offset_normal1"
                            android:textStyle="bold"
                            android:text="@string/login"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/unauthorized_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="@dimen/offset_normal1"
                            android:paddingLeft="@dimen/offset_normal1"
                            android:paddingRight="@dimen/offset_normal1"
                            android:maxLines="1">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/userName_editText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:inputType="textPersonName"
                                android:hint="@string/username"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="@dimen/offset_normal1"
                            android:paddingLeft="@dimen/offset_normal1"
                            android:paddingRight="@dimen/offset_normal1"
                            android:maxLines="1">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/password_editText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:inputType="textPassword"
                                android:hint="@string/password"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/authorized_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/offset_normal1">

                            <ImageView
                                android:layout_width="@dimen/offset_big5"
                                android:layout_height="@dimen/offset_big5"
                                android:layout_gravity="center"
                                android:src="@drawable/drawable_oval_light_gray"/>

                            <ImageView
                                android:id="@+id/userAvatar_imageView"
                                android:layout_width="@dimen/user_avatar_large"
                                android:layout_height="@dimen/user_avatar_large"
                                android:layout_gravity="center"
                                android:src="@drawable/drawable_oval_white"/>
                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_margin="@dimen/offset_small3">

                            <TextView
                                android:id="@+id/changeUsername_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/offset_small2"
                                android:text="@string/not_username"/>

                            <TextView
                                android:id="@+id/changeAccount_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/offset_small2"
                                android:textColor="@color/primary"
                                android:text="@string/change_account"/>
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/offset_normal1"
                        android:textColor="@color/white"
                        android:text="@string/sign_in_with_instagram"
                        android:background="@drawable/button_bg"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loginFailed_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:visibility="gone">

                    <WebView
                        android:id="@+id/login_webView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/loginError_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.SubTitle"
                        android:gravity="center"
                        android:background="@color/light_gray"
                        android:padding="@dimen/offset_small3"
                        android:text="@string/please_try_another_account"/>
                </LinearLayout>
            </FrameLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/chooseAccount_floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_decor_height"
            android:layout_marginEnd="@dimen/login_decor_offset"
            android:layout_marginRight="@dimen/login_decor_offset"
            android:layout_alignEnd="@id/login_cardView"
            android:layout_alignRight="@id/login_cardView"
            android:layout_alignTop="@id/login_cardView"
            app:elevation="@dimen/offset_small3"
            app:backgroundTint="@color/primary"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_choose_profile"/>
    </RelativeLayout>

</ScrollView>
