<?xml version="1.0" encoding="utf-8"?>
<!--Jelvix demo CodeSample
    Copyright © 2017 Jelvix. All rights reserved.-->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/offset_small1"
    app:cardElevation="@dimen/offset_small3"
    tools:ignore="ContentDescription"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/offset_small3"
            android:paddingRight="@dimen/offset_small3"
            android:paddingTop="@dimen/offset_normal1"
            android:paddingBottom="@dimen/offset_small3">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/offset_big3"
                    android:layout_height="@dimen/offset_big3"
                    android:layout_gravity="center"
                    android:src="@drawable/drawable_oval_light_gray"/>

                <ImageView
                    android:id="@+id/userAvatar_imageView"
                    android:layout_width="@dimen/user_avatar_size"
                    android:layout_height="@dimen/user_avatar_size"
                    android:layout_gravity="center"
                    android:src="@drawable/drawable_oval_white"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/fullName_textView"
                    style="@style/AppTheme.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="username" />

                <TextView
                    android:id="@+id/bio_textView"
                    style="@style/AppTheme.SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_small2"
                    tools:text="bio" />

                <TextView
                    android:id="@+id/web_textView"
                    style="@style/AppTheme.SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_small2"
                    android:autoLink="web"
                    tools:text="web" />
            </LinearLayout>

            <Button
                android:id="@+id/follow_button"
                style="@style/AppTheme.FlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/posts_view"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/offset_small3">

                <TextView
                    android:id="@+id/postsCount_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/followers_view"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/offset_small3">

                <TextView
                    android:id="@+id/followersCount_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/following_view"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/offset_small3">

                <TextView
                    android:id="@+id/followingCount_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/gridMode_imageView"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_material_size"
                android:layout_weight="1"
                android:padding="@dimen/offset_small3"
                app:srcCompat="@drawable/ic_grid"
                android:tint="@color/gray"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/listMode_imageView"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_material_size"
                android:layout_weight="1"
                android:padding="@dimen/offset_small3"
                app:srcCompat="@drawable/ic_list"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/offset_big3"
        android:layout_height="@dimen/offset_big3"
        android:layout_gravity="center" />
</android.support.v7.widget.CardView>